kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
  labels:
    app: react-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
        - name: react-ui
          image: davidcamelo/react-ui:main
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 1
