kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ui
  labels:
    app: react-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: manager.davidcamelo.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: react-ui
                port:
                  number: 4173
  tls:
    - hosts:
        - manager.davidcamelo.com
      secretName: react-ui-ingress
